api PUT req adjustment
